recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: '=>' expected but 'case' found.
		case _ -> avance(length)
                ^